<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/activity_main_medical_imageView_hearthbeat"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="3dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_heartbeat"
        android:contentDescription="@string/hearthbeat_image">
    </ImageView>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="9dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_main_medical_textView_hearthBeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/avenir_next_lt_pro_bold"
            android:text="@string/__l__l__"
            android:textSize="26sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/avenir_next_lt_pro_demi"
            android:text="@string/bpm"
            android:textSize="26sp">
        </TextView>

    </LinearLayout>

    <View style="@style/VerticalDivider"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/minimum">
            </TextView>

            <TextView
                android:id="@+id/activity_main_medical_textView_hearthBeat_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="@string/_l_l_">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/bpm">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/average">
            </TextView>

            <TextView
                android:id="@+id/activity_main_medical_textView_hearthBeat_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="@string/_l_l_">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/bpm">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/maximum">
            </TextView>

            <TextView
                android:id="@+id/activity_main_medical_textView_hearthBeat_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="@string/_l_l_"
                android:textSize="13sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/bpm">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>