<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:paddingHorizontal="8dp"
    android:layout_marginLeft="10dp"
    android:paddingVertical="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/activity_main_meteo_imageView_meteoState"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_weather_icon_cloudy">
    </ImageView>

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_main_meteo_textView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:fontFamily="@font/avenir_next_lt_pro_demi"
            android:text="@string/location"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp">
        </TextView>

        <TextView
            android:id="@+id/activity_main_meteo_textView_meteoState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:text="---"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/avenir_next_lt_pro_demi"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/activity_main_meteo_textView_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:textSize="24sp"
                android:text ="- -">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:textSize="24sp"
                android:text ="°C">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <View style="@style/VerticalDivider"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/humidity">
            </TextView>

            <TextView
                android:id="@+id/activity_main_meteo_textView_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="--">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text=" %">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/pressure">
            </TextView>

            <TextView
                android:id="@+id/activity_main_meteo_textView_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="----">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text=" hPa">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text="@string/wind_speed">
            </TextView>

            <TextView
                android:id="@+id/activity_main_meteo_textView_windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="---">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:text=" m/s">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>